--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "Christian",
   "license": "ISC",
@@ -14,5 +14,8 @@
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "12.16.3"
   }
 }
